# rust_elmish_rocket

./: Cargo.toml  README.md
resources/: FiraMono-Bold-license.txt
src/: main.rs
src/models/: grid.rs  mod.rs  player.rs
src/update/: mod.rs
src/view/: mod.rs
