[package]
name = "reactive_rocket"
version = "0.1.0"
authors = ["jj <jj.weber@gmail.com>"]
build = "build.rs"

[dependencies]
itertools = "0.4.13"
piston = "0.22.0"
piston_window = "0.45.0"
piston2d-graphics = "0.16.0"
piston2d-opengl_graphics = "0.28.2"
rand = "0.3.14"
pistoncore-sdl2_window = "0.30.0"
